--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <img src="theafox_logo.jpg" alt="Theafox Logo" />
     <h1>Willkommen bei Theafox Books</h1>
     <p>Bücher, die mit Herz, Fantasie und Visionen erschaffen wurden. Entdecke unser wachsendes Sortiment – von spirituellen Impulsen bis zu kreativen Lernbüchern.</p>
-    <a href="href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3?language=en&ref=sr_ntt_srch_lnk_2&qid=1747740129&sr=8-2&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">Jetzt auf Amazon ansehen</a>
+      <a class="button" href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3?language=en&ref=sr_ntt_srch_lnk_2&qid=1747740129&sr=8-2&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">Jetzt auf Amazon ansehen</a>
   </header>
 
   <footer>
