--- a/index.html
+++ b/index.html
@@ -1,82 +1,31 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Theafox Books</title>
   <style>
     body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-      background: linear-gradient(to bottom right, #2c1a47, #3e4d9a);
+      background-color: #1e1e2f;
       color: white;
+      font-family: sans-serif;
       text-align: center;
-      padding: 2rem;
+      padding-top: 5rem;
     }
-
-    header {
-      padding: 2rem 0;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
-
-    p {
-      max-width: 600px;
-      margin: 1rem auto;
-      font-size: 1.2rem;
-      line-height: 1.5;
-    }
-
-    img {
-      max-width: 120px;
-      margin-top: 1rem;
-    }
-
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-
-    a {
-      color: #ffd700;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .button {
+    a.button {
       display: inline-block;
-      margin-top: 2rem;
-      padding: 0.8rem 1.6rem;
-      background: #ffd700;
-      color: #2c1a47;
+      padding: 1rem 2rem;
+      background-color: #ffd700;
+      color: #1e1e2f;
       font-weight: bold;
-      border-radius: 8px;
       text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .button:hover {
-      background: #e0b800;
+      border-radius: 8px;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="theafox_logo.jpg" alt="Theafox Logo" />
-    <h1>Willkommen bei Theafox Books</h1>
-    <p>Bücher, die mit Herz, Fantasie und Visionen erschaffen wurden. Entdecke unser wachsendes Sortiment – von spirituellen Impulsen bis zu kreativen Lernbüchern.</p>
-      <a class="button" href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3?language=en&ref=sr_ntt_srch_lnk_2&qid=1747740129&sr=8-2&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">Jetzt auf Amazon ansehen</a>
-  </header>
-
-  <footer>
-    &copy; 2025 Theafox Books – Eine Marke von Andrea Kramer
-  </footer>
+  <h1>Willkommen bei Theafox Books</h1>
+  <p>Entdecken Sie unsere Bücher direkt bei Amazon.</p>
+  <a class="button" href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3?language=en&ref=sr_ntt_srch_lnk_2&qid=1747740129&sr=8-2&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">Jetzt ansehen</a>
 </body>
 </html>
