--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Theafox Books</title>
   <style>
     body {
-      background-color: #1e1e2f;
-      color: white;
+      background-color: #ffffff;
+      color: #1e1e2f;
       font-family: sans-serif;
       text-align: center;
       padding-top: 5rem;
@@ -20,6 +20,9 @@
       text-decoration: none;
       border-radius: 8px;
       margin-top: 2rem;
+    }
+    a.button:hover {
+      background-color: #e0c200;
     }
   </style>
 </head>
