--- a/index.html
+++ b/index.html
@@ -5,24 +5,38 @@
   <title>Theafox Books</title>
   <style>
     body {
-      background-color: #ffffff;
-      color: #1e1e2f;
+      background-color: #0e0e0e;
+      color: #ffffff;
       font-family: sans-serif;
       text-align: center;
-      padding-top: 5rem;
+      padding: 5rem 1rem;
     }
+
+    h1 {
+      color: #c99d49;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto 2rem;
+    }
+
     a.button {
       display: inline-block;
       padding: 1rem 2rem;
-      background-color: #ffd700;
-      color: #1e1e2f;
+      background-color: #c99d49;
+      color: #0e0e0e;
       font-weight: bold;
       text-decoration: none;
       border-radius: 8px;
-      margin-top: 2rem;
+      transition: background-color 0.3s ease;
     }
+
     a.button:hover {
-      background-color: #e0c200;
+      background-color: #b88b3d;
     }
   </style>
 </head>
