--- a/index.html
+++ b/index.html
@@ -5,38 +5,21 @@
   <title>Theafox Books</title>
   <style>
     body {
-      background-color: #0e0e0e;
-      color: #ffffff;
+      background-color: #1e1e2f;
+      color: white;
       font-family: sans-serif;
       text-align: center;
-      padding: 5rem 1rem;
+      padding-top: 5rem;
     }
-
-    h1 {
-      color: #c99d49;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 2rem;
-    }
-
     a.button {
       display: inline-block;
       padding: 1rem 2rem;
-      background-color: #c99d49;
-      color: #0e0e0e;
+      background-color: #ffd700;
+      color: #1e1e2f;
       font-weight: bold;
       text-decoration: none;
       border-radius: 8px;
-      transition: background-color 0.3s ease;
-    }
-
-    a.button:hover {
-      background-color: #b88b3d;
+      margin-top: 2rem;
     }
   </style>
 </head>
