--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       color: #ffffff;
       font-family: sans-serif;
       text-align: center;
-      padding: 5rem 1rem;
+      padding-top: 4rem;
+    }
+
+    img {
+      max-width: 120px;
+      margin-bottom: 2rem;
     }
 
     h1 {
@@ -32,6 +37,7 @@
       font-weight: bold;
       text-decoration: none;
       border-radius: 8px;
+      margin-top: 2rem;
       transition: background-color 0.3s ease;
     }
 
@@ -41,6 +47,7 @@
   </style>
 </head>
 <body>
+  <img src="theafox_logo.jpg" alt="Theafox Logo" />
   <h1>Willkommen bei Theafox Books</h1>
   <p>Entdecken Sie unsere Bücher direkt bei Amazon.</p>
   <a class="button" href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3?language=en&ref=sr_ntt_srch_lnk_2&qid=1747740129&sr=8-2&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">Jetzt ansehen</a>
