--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   <header>
     <img src="theafox_logo.jpg" alt="Theafox Logo" />
     <h1>Willkommen bei Theafox Books</h1>
-    <p>Bücher, die mit Herz, Fantasie und Visionen erschaffen wurden. Entdecke unser wachsendes Sortiment – von spirituellen Impulsen bis zu kreativen Lernbüchern.</p>
+    <p>Bücher mit Herz, Fantasie und Tiefgang.
+Entdecke das wachsende Sortiment von Theafox Books: von spirituellen Impulsen und kreativen Lernhilfen bis hin zu liebevoll illustrierten Kinderbüchern.
+Für kleine Entdecker – und große Träumer.</p>
     <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Jetzt auf Amazon ansehen</a>
   </header>
 
