--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 <body>
   <header>
     <img src="theafox_logo.jpg" alt="Theafox Logo" />
-    <h1>Willkommen bei Theafox Books</h1>
-    <p>Bücher mit Herz, Fantasie und Tiefgang.
-Entdecke das wachsende Sortiment von Theafox Books: von spirituellen Impulsen und kreativen Lernhilfen bis hin zu liebevoll illustrierten Kinderbüchern.
-Für kleine Entdecker – und große Träumer.</p>
-    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Jetzt auf Amazon ansehen</a>
+    <h1>Welcome to the world of Theafox Books</h1>
+    <p>Books with heart, imagination, and depth.
+Discover the growing collection from Theafox Books – from spiritual reflections and creative learning tools to lovingly illustrated children’s stories.
+For little explorers – and big dreamers.</p>
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">View now on Amazon</a>
   </header>
 
   <footer>
