--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ For little explorers – and big dreamers.</p>
   </header>
 
   <footer>
-    &copy; 2025 Theafox Books – Eine Marke von Andrea Kramer
+    &copy; 2025 Theafox Books – A brand by Andrea Kramer
   </footer>
 </body>
 </html>
