--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
     <p>Books with heart, imagination, and depth.
 Discover the growing collection from Theafox Books – from spiritual reflections and creative learning tools to lovingly illustrated children’s stories.
 For little explorers – and big dreamers.</p>
-    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">View now on Amazon</a>
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">View Andrea's Books now on Amazon</a>
+    <br>
+    <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true&ccs_id=0a6fda5d-4bbf-4917-a100-0c5da3dde480" target="_blank" class="button">View Paul's Books now on Amazon</a>
   </header>
 
   <footer>
-    &copy; 2025 Theafox Books – A brand by Andrea Kramer
+    &copy; 2025 Theafox Books – A brand by Andrea&Paul Kramer
   </footer>
 </body>
 </html>
