--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .button {
       display: inline-block;
-      margin-top: 2rem;
+      margin: 0.8rem;
       padding: 0.8rem 1.6rem;
       background: #c99d49;
       color: #0e0e0e;
@@ -72,16 +72,23 @@
   <header>
     <img src="theafox_logo.jpg" alt="Theafox Logo" />
     <h1>Welcome to the world of Theafox Books</h1>
-    <p>Books with heart, imagination, and depth.
-Discover the growing collection from Theafox Books – from spiritual reflections and creative learning tools to lovingly illustrated children’s stories.
-For little explorers – and big dreamers.</p>
-    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">View Andrea's Books now on Amazon</a>
-    <br>
-    <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH" target="_blank" class="button">View Paul's Books now on Amazon</a>
+    <p>
+      Stories, guides, and ideas with heart, imagination, and depth.<br>
+      At Theafox Books, you’ll find inspiring reflections, creative puzzle and learning tools, and beautifully illustrated tales – plus unique extras and digital downloads in our shop.<br>
+      A growing collection for curious minds, little explorers, and big dreamers alike.
+    </p>
+
+    <!-- Bestehende Buttons -->
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Discover Andrea's Books on Amazon</a>
+    <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH" target="_blank" class="button">Explore Paul's Books on Amazon</a>
+
+    <!-- Neue Buttons -->
+    <a href="https://payhip.com/Theafox" target="_blank" class="button">Shop More from Theafox on Payhip</a>
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Browse Theafox Word Search Books on Amazon</a>
   </header>
 
   <footer>
-    &copy; 2025 Theafox Books – A brand by Andrea&Paul Kramer
+    &copy; 2025 Theafox Books – A brand by Andrea & Paul Kramer
   </footer>
 </body>
 </html>
