--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH" target="_blank" class="button">Explore Paul's Books on Amazon</a>
 
     <!-- Neue Buttons -->
-    <a href="https://payhip.com/Theafox" target="_blank" class="button">Shop More from Theafox on Payhip</a>
+    <a href="https://payhip.com/Theafox" target="_blank" class="button">Discover More in our Onlineshop</a>
     <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3/allbooks" target="_blank" class="button">Browse Theafox Word Search Books on Amazon</a>
   </header>
 
@@ -92,4 +92,5 @@
   </footer>
 </body>
 </html>
+
 
