--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     </p>
 
     <!-- Bestehende Buttons -->
-    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Discover Andrea's Books on Amazon</a>
-    <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH" target="_blank" class="button">Explore Paul's Books on Amazon</a>
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3" target="_blank" class="button">Discover Andrea's Books</a>
+    <a href="https://www.amazon.com/stores/Paul-Kramer/author/B0FDL28XWH" target="_blank" class="button">Explore Paul's Books</a>
 
     <!-- Neue Buttons -->
     <a href="https://payhip.com/Theafox" target="_blank" class="button">Discover More in our Onlineshop</a>
-    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3/allbooks" target="_blank" class="button">Browse Theafox Word Search Books on Amazon</a>
+    <a href="https://www.amazon.de/stores/Andrea-Kramer/author/B0F6LS5XR3/allbooks" target="_blank" class="button">Browse Theafox Word Search Books</a>
   </header>
 
   <footer>
@@ -92,5 +92,6 @@
   </footer>
 </body>
 </html>
+
 
 
