--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h1>Welcome to the world of Theafox Books</h1>
     <p>
       Stories, guides, and ideas with heart, imagination, and depth.<br>
-      At Theafox Books, you’ll find inspiring reflections, creative puzzle and learning tools, and beautifully illustrated tales – plus unique extras and digital downloads in our shop.<br>
+      At Theafox Books, created by Andrea and Paul Kramer, you’ll find inspiring reflections, creative puzzle and learning tools, and beautifully illustrated tales – plus unique extras and digital downloads in our shop.<br>
       A growing collection for curious minds, little explorers, and big dreamers alike.
     </p>
 
@@ -92,6 +92,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
